syntax = "proto3";

package proto;

option go_package = "github.com/teran/secretbox/presenter/grpc/proto";

service SecretBoxService {
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
}

message GetSecretRequest {
  string name = 1;
  string token = 2;
}

message GetSecretResponse {
  string secret = 1;
}
